tests/compile-fail/specify-does-not-work-if-the-key-is-a-salsa-input.stderr
error[E0277]: the trait bound `Input<MyInput_Fields_>: salsa::Struct` is not satisfied
  --> tests/compile-fail/specify-does-not-work-if-the-key-is-a-salsa-input.rs:15:1
   |
15 | #[salsa::tracked(specify)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `salsa::Struct` is not implemented for `Input<MyInput_Fields_>`
   |
help: the following other types implement trait `salsa::Struct`
  --> tests/compile-fail/specify-does-not-work-if-the-key-is-a-salsa-input.rs:5:1
   |
 5 | #[salsa::input]
   | ^^^^^^^^^^^^^^^ `MyInput`
...
10 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ `MyTracked<'db>`
   = note: required for `Input<MyInput_Fields_>` to implement `salsa::plumbing::TrackedStructInDb`
   = note: 1 redundant requirement hidden
   = note: required for `MyInput` to implement `salsa::plumbing::TrackedStructInDb`
note: required by a bound in `salsa::function::specify::<impl salsa::function::IngredientImpl<C>>::specify_and_record`
  --> src/function/specify.rs
   |
   |     pub fn specify_and_record<'db>(&'db self, db: &'db C::DbView, key: Id, value: C::Output<'db>)
   |            ------------------ required by a bound in this associated function
   |     where
   |         C::Input<'db>: TrackedStructInDb,
   |                        ^^^^^^^^^^^^^^^^^ required by this bound in `salsa::function::specify::<impl IngredientImpl<C>>::specify_and_record`
   = note: this error originates in the macro `salsa::plumbing::setup_tracked_fn` which comes from the expansion of the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
